fix broken merge